2026-01-06  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-sh-handle-copy-directory): Check for
	`tramp-method-out-of-band-p' explicitly.
	(tramp-method-out-of-band-p): There shouldn't be a multi-hop.

2026-01-03  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-get-ls-command): Prefer gnuls over ls.
	(tramp-get-remote-readlink): Prefer gnureadlink over readlink.
	(Bug#79956, Bug#80075)

2026-01-02  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-completion-handle-file-name-all-completions):
	Keep `tramp-default-method{-alist}' in order to get completion
	functions for `tramp-default-method-marker'.

2025-12-31  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.8.1 released

2025-12-26  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-adb.el (tramp-adb-do-ls): New function.
	(tramp-adb-handle-file-attributes)
	(tramp-adb-handle-directory-files-and-attributes)
	(tramp-adb-handle-file-name-all-completions): Use it.  (Bug#80054)

2025-12-20  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-completion-handle-expand-file-name):
	Expand FILENAME also when it is absolute.  (Bug#80031)

2025-12-15  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-smb.el (tramp-smb-handle-make-process): Suppress lock files.

2025-12-14  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-smb.el (tramp-smb-handle-make-process): Handle error buffer.

2025-12-13  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-smb.el (tramp-smb-handle-make-process)
	(tramp-smb-handle-process-file): Handle STDERR file.
	(tramp-smb-call-winexe): Regroup sent commands.

2025-12-06  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-smb.el (tramp-smb-file-name-handler-alist):
	Use `tramp-smb-handle-make-process', `tramp-smb-handle-shell-command'
	and `tramp-handle-start-file-process'.
	(tramp-smb-matching-line): New defvar.
	(tramp-smb-handle-make-process, tramp-smb-handle-shell-command)
	(tramp-smb-shell-prompt): New defuns.