@@ -1,8 +1,18 @@
 2026-01-06  Michael Albinus  <michael.albinus@gmx.de>
 
+	* tramp.el (tramp-methods): Adapt docstring.
+	(tramp-barf-if-file-missing)
+	(with-parsed-tramp-file-name): Adapt debug spec.
+	(tramp-skeleton-copy-directory): Flush directory properties.
+	(tramp-add-hops): Check for `tramp-login-args' property.
+
 	* tramp-sh.el (tramp-sh-handle-copy-directory): Check for
-	`tramp-method-out-of-band-p' explicitly.
+	`tramp-method-out-of-band-p' explicitly. Don't flush directory
+	properties.
 	(tramp-method-out-of-band-p): There shouldn't be a multi-hop.
+
+	* tramp-smb.el (tramp-smb-handle-copy-directory): Don't flush directory
+	properties.
 
 2026-01-03  Michael Albinus  <michael.albinus@gmx.de>
 
